--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,8 @@
 
     <string name="service_description">Service for TCP/IP communication in FriendLocator</string>
     <string name="app_name">FriendLocator</string>
-
-
     <string name="default_username">Anonymous</string>
     <string name="username">Anonymous</string>
-
-
     <string name="tab_map">Map</string>
     <string name="tab_chat">Chat</string>
 
@@ -24,12 +20,19 @@
     <string name="button_chat_description">Start chatting</string>
     <string name="button_map_description">See group members on map</string>
 
-
     <!--ChatFragment-->
 
+    <string name="photo_ready">Photo is ready</string>
     <string name="empty_message">The message is empty. Write something first maybe?"</string>
     <string name="hint_message">Say something...</string>
     <string name="change_name_text">You can change your name here</string>
     <string name="change_name_done">Change name</string>
+
+    <!--ServerService-->
+    <string name="disconnection_notice">\"Did you get your disconnection notice? Mine came in the mail todaaaay.
+        They seem to think I\'m disconnected. Don\'t think I know what to reaaaad or wriiiite or saaaay.
+        Glossaries injected daily. Words and numbers spell out the price to paaaay.
+        It simply states \"you're disconnected baby\".
+        See how easily it all slips awaaay\" </string>
 
 </resources>
